# protein-domain-segmentation-library

./: .gitignore  MANIFEST.IN  README.md  pyproject.toml
.github/workflows/: python-publish.yml
protein_domain_segmentation/: __init__.py  version.py
protein_domain_segmentation/chainsaw/: domain_chop.py  factories.py  featurisers.py  run_chainsaw.py
protein_domain_segmentation/chainsaw/domain_assignment/: assigners.py
protein_domain_segmentation/chainsaw/utils/: secondary_structure.py
protein_domain_segmentation/merizo/: run_merizo.py
protein_domain_segmentation/merizo/model/decoders/: mask_decoder.py
protein_domain_segmentation/merizo/model/utils/: features.py  utils.py
src/chainsaw/stride/: stride
src/protein_domain_segmentation/: __init__.py
src/protein_domain_segmentation.egg-info/: top_level.txt
src/protein_domain_segmentation/chainsaw/: featurisers.py
src/protein_domain_segmentation/chainsaw/utils/: secondary_structure.py
src/protein_domain_segmentation/merizo/model/decoders/: mask_decoder.py
src/protein_domain_segmentation/merizo/model/utils/: features.py  utils.py
tests/: test_chainsaw.py  test_merizo.py
