[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "torch>=2.0.1", "MDAnalysis>=2.0.0", "pandas", "biopython", "pydantic", "einops", "natsort", "rotary_embedding_torch"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-domain-segmentation"
authors = [
    { name = "Gaspard Merten", email = "gaspard.mp.work@gmail.com" },
]
dynamic = ["version"]
description = "A library for protein domain segmentation using Merizo and Chainsaw."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "MDAnalysis",
    "pandas",
    "biopython",
    "pydantic",
    "einops",
    "natsort",
    "rotary_embedding_torch",
]

[project.urls]
Homepage = "https://github.com/GaspardMerten/protein-domain-segmentation-library"
Issues = "https://github.com/GaspardMerten/protein-domain-segmentation-library/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "protein_domain_segmentation/version.py"


[tool.setuptools.package-data]
"*" = ["chainsaw/*.pt", "merizo/*.pt", "chainsaw/*.json", "merizo/*.json"]